--- a/arch/arm64/configs/oneplus5_defconfig
+++ b/arch/arm64/configs/oneplus5_defconfig
@@ -766,3 +766,6 @@ CONFIG_KSWAPD_CPU_AFFINITY_MASK="f"
 # waynechang,2017/3/15, add CONFIG_INPUT_KEYCHORD to enable keychord function for systrace service
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_NET_CLS_CGROUP=y
+CONFIG_WIREGUARD=y
+CONFIG_SOUND_CONTROL=y
+CONFIG_SWEEP2SLEEP=y
