--- a/arch/arm64/configs/oneplus5_defconfig
+++ b/arch/arm64/configs/oneplus5_defconfig
@@ -490,6 +490,7 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 # CONFIG_FB_MSM_MDSS_HDMI_PANEL is not set
 CONFIG_FB_MSM_MDSS_DP_PANEL=y
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 # CONFIG_SND_PCI is not set
@@ -498,6 +499,7 @@ CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_USB_AUDIO_QMI=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_MSM8998=y
+CONFIG_SOUND_CONTROL=y
 CONFIG_UHID=y
 CONFIG_HID_MAGICMOUSE=y
 CONFIG_HID_MICROSOFT=y
@@ -759,6 +761,3 @@ CONFIG_KSWAPD_CPU_AFFINITY_MASK="f"
 # waynechang,2017/3/15, add CONFIG_INPUT_KEYCHORD to enable keychord function for systrace service
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_NET_CLS_CGROUP=y
-CONFIG_WIREGUARD=y
-CONFIG_SOUND_CONTROL=y
-CONFIG_SWEEP2SLEEP=y
